--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project>
     <modelVersion>4.0.0</modelVersion>
     <groupId>ru.smartdec</groupId>
-    <artifactId>solidity-checker</artifactId>
+    <artifactId>smartcheck</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
         <linkXRef>false</linkXRef>
@@ -84,7 +84,7 @@
                     <archive>
                         <manifest>
                             <mainClass>
-                                ru.smartdec.soliditycheck.app.cli.Tool
+                                ru.smartdec.smartcheck.app.cli.Tool
                             </mainClass>
                         </manifest>
                     </archive>
@@ -117,7 +117,7 @@
                         </goals>
                         <configuration>
                             <mainClass>
-                                ru.smartdec.soliditycheck.app.cli.TreeView
+                                ru.smartdec.smartcheck.app.cli.TreeView
                             </mainClass>
                         </configuration>
                     </execution>
@@ -128,7 +128,7 @@
                         </goals>
                         <configuration>
                             <mainClass>
-                                ru.smartdec.soliditycheck.app.cli.XmlView
+                                ru.smartdec.smartcheck.app.cli.XmlView
                             </mainClass>
                         </configuration>
                     </execution>
