--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>ru.smartdec</groupId>
     <artifactId>smartcheck</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.0</version>
     <properties>
         <linkXRef>false</linkXRef>
         <maven.compiler.source>1.8</maven.compiler.source>
