--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   },
   "author": "SmartDec <info@smartdec.net> (https://smartdec.net/)",
   "description": "SmartCheck is an extensible static analysis tool for discovering vulnerabilities and other code issues in Ethereum smart contracts written in the Solidity and Vyper programming languages.",
-  "homepage": "https://tool.smartdec.ru/",
+  "homepage": "https://tool.smartdec.net/",
   "main": "index.js",
   "preferGlobal": true,
   "repository": "https://github.com/smartdec/smartcheck",
