--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>2.17</version>
+                <version>3.0.0</version>
                 <executions>
                     <execution>
                         <phase>validate</phase>
@@ -84,6 +84,9 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <configLocation>
+                        google_checks.xml
+                    </configLocation>
                     <sourceDirectories>
                         <sourceDirectory>src/main/java</sourceDirectory>
                     </sourceDirectories>
